@@ -40,6 +40,9 @@ const char filters_rcs[] = "$Id$";
  *
  * Revisions   :
  *    $Log$
+ *    Revision 1.103  2008/03/06 16:33:45  fabiankeil
+ *    If limit-connect isn't used, don't limit CONNECT requests to port 443.
+ *
  *    Revision 1.102  2008/03/01 14:00:44  fabiankeil
  *    Let the block action take the reason for the block
  *    as argument and show it on the "blocked" page.
@@ -842,9 +845,9 @@ int acl_addr(const char *aspec, struct access_control_addr *aca)
  *********************************************************************/
 int connect_port_is_forbidden(const struct client_state *csp)
 {
-   return ((!(csp->action->flags & ACTION_LIMIT_CONNECT) && csp->http->port != 443)
-      || (csp->action->flags & ACTION_LIMIT_CONNECT &&
-          !match_portlist(csp->action->string[ACTION_STRING_LIMIT_CONNECT], csp->http->port)));
+   return ((csp->action->flags & ACTION_LIMIT_CONNECT) &&
+     !match_portlist(csp->action->string[ACTION_STRING_LIMIT_CONNECT],
+        csp->http->port));
 }
 
 
